# hellopyqt

./: README.rst  pyproject.toml
.github/workflows/: make_bundle.yml
src/hellopyqt/: __main__.py  app.py
